--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ code/output/sum_dfs/*_sum_df.tsv
 /code/output/processed_data
 /code/output
 /data/ud-treebanks-v2.14
+/data/ud-documentation-v2.14
