--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ code/output/sum_dfs/*_sum_df.tsv
 /data/ud-treebanks-v2.14
 /data/ud-documentation-v2.14
 /code/output_unfiltered
+notes 20240301.txt
