--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -10,6 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.4.3'
+      - run: Rscript -e 'print("R installed successfully")'
 
       - name: Install dependencies
         run: Rscript -e 'install.packages(c("testthat"))'
