--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -12,10 +12,10 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.4.3'
-      - run: Rscript -e 'print("R installed successfully")'
+      - run: Rscript -e "print('R installed successfully')"
 
       - name: Install dependencies
-        run: Rscript -e 'install.packages(c("testthat"))'
+        run: Rscript -e "install.packages(c('testthat'))"
 
       - name: Run Tests
-        run: Rscript -e 'library(testthat); test_dir("tests")'
+        run: Rscript -e "library(testthat); test_dir('tests')"
