--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ code/output/sum_dfs/*_sum_df.tsv
 /code/output/processed_data
 /code/output
 /code/output_test
-/data/ud-treebanks-v2.14
+#/data/ud-treebanks-v2.14 # Keep the directory; the .gitignore file in it will prevent syncing contents
 /data/ud-documentation-v2.14
 /code/output_unfiltered
 notes 20240301.txt
