--- a/.github/workflows/r-cmd-check.yaml
+++ b/.github/workflows/r-cmd-check.yaml
@@ -19,7 +19,7 @@ jobs:
       - run: Rscript -e "print('R installed successfully')"
 
       - name: Install dependencies
-        run: Rscript -e "install.packages(c('testthat','dplyr','tidyr','readr','stringr','reshape2'))"
+        run: Rscript -e "install.packages(c('testthat','dplyr','magrittr','tidyr','readr','stringr','reshape2'))"
 
       - name: Run Tests
         run: Rscript -e "library(testthat); test_dir('tests')"
