--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "tqdm>=4.67.1,<5.0.0",
     "polars>=1.35.2,<2.0.0",
     "pytest>=8.3.4,<9.0.0",
+    "matplotlib>=3.10.8,<4.0.0",
 ]
 
 [tool.setuptools]
